# Harbinger

./: .gitignore  midi_note_to_freq.ods  pll_ice40.ods
HDL/: Makefile
HDL/ice40_phys/: harbinger.pcf  ram.data
HDL/simu_i2s/: i2s_sim  simu_i2s.bat  simu_i2s_refresh.bat
HDL/simu_operator/: operator_sim  signed.c  signed_test  simu_operator.bat  simu_operator.v  simu_operator_refresh.bat
HDL/simu_uart/: simu_uart_refresh.bat  uart_sim
HDL/spartan7/: pins.xdc
HDL/src/: dual_fast_spi.v  generic_macro.vh  i2s.v  midi_freq.data  midi_parser.v  nco_phase.v  operator.v  spi_slave.v  top.v  uart_rx.v  voice.v
HDL_v2/: build.tcl
HDL_v2/constraint/: harbv2.xdc
HDL_v2/src/: dual_fast_spi.v  fsm.sv  i2s.v  output_mixer.sv  phase_acc.sv  top_harbv2.sv  voice.sv
mechanic/V0.2/: KK_bottom-Body.gcode  assembly.FCStd1  bottom-Body.stl  bottom.FCStd  bottom.FCStd1  proto_v0.2.FCStd
mechanic/first_proto/: bot.FCStd
mechanic/second_proto/: box-Body.stl  box.FCStd  (+3 more)
pico_rust/: Cargo.toml  to_install.sh
pico_rust/.cargo/: config
pico_rust/src/: fast_spi.pio  fpga.rs  frame_buffer.rs  ili9341screen.rs  keys.rs  main.rs  midi.rs  rgb_led.rs  voices.rs
pico_soft/basic_controller/midi_processor/: CMakeLists.txt  fast_spi.pio  fast_spi.pio.h  fpga_link.h  ili9341.h  midi_notes.h  multicore_runner_queue.c  screen.c  screen.h  sound_template.h
rtl/: Makefile  harbinger.pcf  operator.v  sincos_luts.v  top.v  uart_rx.v
test_rust/: memory.x
utils/: dectohex.c
vivado_project_export/: harbinger_project.tcl  harbinger_synth_def_val.txt  harbinger_synth_dump.txt
(+589 files in other folders)
