[package]
name = "pico_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp2040-hal = "0.8.2"
rp-pico = "0.7.0"
fugit = "0.3.7"
nb = "1.1.0"
pio-proc = "0.2.2"
pio = "0.2.1"
